--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "homepage": "https://valentin-panov.github.io/ra-bosa-noga/",
+  "homepage": "https://valentin-panov.github.io/ra16-diploma/",
   "sideEffects": [
     "**/*.sass"
   ],
